# ToTray

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  totray.desktop
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
src/: backend.rs  hypr.rs  main.rs  state.rs  ui.rs
