[package]
name = "totray"
version = "0.1.0"
edition = "2024"
description = "AutoRun utility for hyprland."
repository = "https://github.com/Agzes/totray"
license = "MIT"
keywords = ["tray", "hyprland"]
categories = ["os-linux", "gui", "utilities"]

[dependencies]
gtk = { version = "0.7", package = "gtk4", features = ["v4_10"] }
glib = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ksni = "0.2.2"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
notify-rust = "4.11"
dirs = "5.0"

[package.metadata.appimage]
name = "ToTray"
icon = "assets/logo.png"
desktop_entry = "totray.desktop"
auto_link = true
category = "Utility"
